modif du body de la branche

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Mon index modifié 2 la branche 2 loooooooooool</title>
+        <title>Mon index modifié 2</title>
     </head>
     <body>
-
+        je modifie mon body
     </body>
 </html>
