--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Mon index modifié 2</title>
+        <title>Mon index modifié de la master</title>
     </head>
     <body>
         je modifie mon body
